--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
+    <script src="jquery.min.js"></script>
     <script src="main.js"></script>
   </head>
   <body>
